--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,34 @@
 [package]
-name = "smashline_test"
+name = "gastly"
 version = "0.1.0"
-authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [package.metadata.skyline]
-titleid = "01006A800016E000"
+titleid = "01006A800016E000" # Smash Ultimate
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-skyline = "0.2.1"
-skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
-smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
-smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
+skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
+skyline_smash = { git = "https://github.com/blu-dev/skyline-smash" }
+smash_script = { git = "https://github.com/blu-dev/smash-script", branch = "development" }
+smashline = { git = "https://github.com/HDR-Development/smashline" }
 smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
+arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
+param_config = { git = "https://github.com/csharpm7/lib_paramconfig.git"}
+the_csk_collection_api = { git = "https://github.com/Coolsonickirby/the_csk_collection_api" }
+hash40 = "0.4.0"
+once_cell = "1.18.0"
+parking_lot = "0.12.1"
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
-opt-level = 'z'
 panic = "abort"
 lto = true
-codegen-units = 1
+
+[features]
+dev = []
+devhook = []
